--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -24,6 +24,7 @@ bugfix release
   - make sure 'modules_tool' attribute is also defined for extensions (#2026)
   - only dump easyconfig with modified deps due to --minimal-toolchains to 'reprod' subdir of install dir (#2028)
   - avoid appending '-h' to sanity check commands specified as a string (#2030)
+  - fix bug in list_software_rst: always include versionsuffix regardless of value (#2032)
 
 
 v3.0.0 (November 16th 2016)
