--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,19 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
+v3.0.2 (December 21st 2016
+---------------------------
+
+bugfix release
+- various bug fixes, including:
+  - also skip dependencies of dependencies marked as external module in get_toolchain_hierarchy   (#2042)
+  - disable verbose setvar in modules.py   (#2044)
+  - force copying of easyconfigs in --new-pr/--update-pr, even when combined with -x   (#2045)
+  - add 'rpath' toolchain option to selectively disable use of RPATH wrappers   (#2047)
+  - fix verification of filename for easyconfigs used to resolve deps   (#2051)
+  - skip RPATH sanity check when toolchain did not use RPATH wrappers   (#2052)
+
+
 v3.0.1 (November 30th 2016)
 ---------------------------
 
