collapse #2078 with #2074 in release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -12,8 +12,7 @@ feature release
   - add support for --check-style to check style in easyconfig files (#1618, #2038)
   - add HOME and USER from envto available cfg file constants (#2063)
   - --optarch can now be specified on a toolchain basis (#2071)
-  - implement get_cpu_features function in systemtools (#2074)
-  - also detect VSX support for POWER (#2078)
+  - implement get_cpu_features function in systemtools (#2074, #2078)
   - support use of linalg without MPI, add iimkl toolchain definition (#2082)
   - spoof HTTP request header with empty agent (#2083)
   - exclude dependencies of dependencies that extend $MODULEPATH in make_module_dep (#2091)
