--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,19 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
+v3.1.1 (March 3rd 2017)
+-----------------------
+
+bugfix release
+- various bug fixes, including:
+  - handle the case when no compiler-specific optarch flag is defined (#1950)
+  - add ec parameter to expand_toolchain_load() (#2103)
+  - ensure that $EBEXTSLIST* is also included in generated module under --module-only (#2112)
+  - fix formatting issues in generated documentation for --list-software and --avail-easyconfig-licenses (#2121)
+  - clarify unstable/closed PR warning message (#2129)
+  - replace --enable-new-dtags with --disable-new-dtags instead of remove from command line (#2131)
+
+
 v3.1.0 (February 3rd 2017)
 --------------------------
 
