--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,18 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
+v3.2.1 (May 12th 2017)
+----------------------
+
+bugfix release
+- various enhancements, including:
+  - make hardcoded max ratio for failures in adjust_permissions configurable (#2213)
+  - allow https on direct download in sources (#2214)
+- various bug fixes, including:
+  - bump version bootstrap script to sync with latest update (#2208)
+  - fix crash during module generation when '%' character is used in description (#2209)
+
+
 v3.2.0 (May 5th 2017)
 ---------------------
 
