--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,7 +1,7 @@
 This file contains a description of the major changes to the easybuild-framework EasyBuild package.
 For more detailed information, please see the git log.
 
-These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
+These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
 v3.3.0 (June 26th 2017)
 -----------------------
@@ -15,9 +15,9 @@ feature release
   - add support for SHA256 checksums (#2215)
     - also auto-detect whether provided checksum is MD5 or SHA256 based on length (if not checksum type is specified)
     - add support for --enforce-checksums, to require availability of checksums for sources/patches
-    - see http://easybuild.readthedocs.io/en/latest/Writing_easyconfig_files.html#source-files-patches-and-checksums
+    - see https://easybuild.readthedocs.io/en/latest/Writing_easyconfig_files.html#source-files-patches-and-checksums
   - add support for renaming sources on download (#2223)
-    - also involves deprecating use of 2-tuple elements in list of sources, see http://easybuild.readthedocs.io/en/latest/Deprecated-functionality.html#depr-sources-2-element-tuple
+    - also involves deprecating use of 2-tuple elements in list of sources, see https://easybuild.readthedocs.io/en/latest/Deprecated-functionality.html#depr-sources-2-element-tuple
   - add support for --detect-loaded-modules (#2228)
   - give extensions access to module_generator of parent (#2229)
   - pass down additional arguments to copy_dir down to shutil.copytree (#2230)
@@ -188,11 +188,11 @@ feature release
   - the minimal required version of Lmod was bumped to 5.8 (#1985)
 - major new features:
   - (experimental) support for RPATH linking via --rpath (#1942)
-    - see http://easybuild.readthedocs.org/en/latest/RPATH-support.html
+    - see https://easybuild.readthedocs.io/en/latest/RPATH-support.html
   - add support for --consider-archived-easyconfigs (#1972)
-    - see http://easybuild.readthedocs.org/en/latest/Archived-easyconfigs.html
+    - see https://easybuild.readthedocs.io/en/latest/Archived-easyconfigs.html
   - stabilize --new-pr and --update-pr (#1979)
-    - see http://easybuild.readthedocs.org/en/latest/Integration_with_GitHub.html
+    - see https://easybuild.readthedocs.io/en/latest/Integration_with_GitHub.html
 - various other small enhancements, including:
   - add support for 'devel' log level (#1815)
   - make remove_file aware of --extended-dry-run + add dedicated unit test (#1932)
@@ -413,7 +413,7 @@ feature + bugfix release
         - using custom easyblocks by adding them in the Python search path ($PYTHONPATH) may require adjustments,
           i.e. also using pkg_resources.declare_namespace in the __init__.py files;
           we highly recommend to use --include-easyblocks instead,
-          see http://easybuild.readthedocs.org/en/latest/Including_additional_Python_modules.html
+          see https://easybuild.readthedocs.io/en/latest/Including_additional_Python_modules.html
         - note: this has the side-effect of not being able anymore to reliably use 'eb' in the parent directory of
           the easybuild-framework repository (#1667)
     - fix template for savannah.gnu.org source URL (#1601)
@@ -471,7 +471,7 @@ v2.5.0 (December 17th 2015)
 feature + bugfix release
 - add support for IBM XL compilers on Power7 and PowerPC (BlueGene) (#1470)
 - add support fo generic compilation using --optarch=GENERIC (#1471)
-    - see also http://easybuild.readthedocs.org/en/latest/Controlling_compiler_optimization_flags.html
+    - see also https://easybuild.readthedocs.io/en/latest/Controlling_compiler_optimization_flags.html
 - update experimental support for .yeb easyconfigs (#1515)
     - support clean way to specify toolchain + dependencies in .yeb easyconfigs
 - various other enhancements, including:
@@ -510,9 +510,9 @@ feature + bugfix release
     - this impacts several easyconfig files where sanity_check_paths was not 100% correct
 - make 'eb' script aware of Python v3.x, fall back to using python2 if required (#1411)
 - add experimental support for parsing .yeb easyconfig files in YAML syntax (#1447, #1448, #1449)
-    - see also http://easybuild.readthedocs.org/en/latest/Writing_yeb_easyconfig_files.html
+    - see also https://easybuild.readthedocs.io/en/latest/Writing_yeb_easyconfig_files.html
 - add experimental support for resolving dependencies with minimal toolchains (#1306)
-    - see also http://easybuild.readthedocs.org/en/latest/Manipulating_dependencies.html#using-minimal-toolchains-for-dependencies
+    - see also https://easybuild.readthedocs.io/en/latest/Manipulating_dependencies.html#using-minimal-toolchains-for-dependencies
 - various other enhancements, including:
     - refactor extract_cmd function to get rid of if/elif/else spaghetti blob (#1382)
     - add support for --review-pr (#1383)
@@ -576,11 +576,11 @@ v2.2.0 (July 15th 2015)
 
 feature + bugfix release
 - add support for using GC3Pie as a backend for --job (#1008)
-    - see also http://easybuild.readthedocs.org/en/latest/Submitting_jobs.html
+    - see also https://easybuild.readthedocs.io/en/latest/Submitting_jobs.html
 - add support for --include-* configuration options to include additional easyblocks, toolchains, etc. (#1301)
-    - see http://easybuild.readthedocs.org/en/latest/Including_additional_Python_modules.html
+    - see https://easybuild.readthedocs.io/en/latest/Including_additional_Python_modules.html
 - add (experimental) support for packaging installed software using FPM (#1224)
-    - see http://easybuild.readthedocs.org/en/latest/Packaging_support.html
+    - see https://easybuild.readthedocs.io/en/latest/Packaging_support.html
 - various other enhancements, including:
     - use https for PyPI URL templates (#1286)
     - add GNU toolchain definition (#1287)
@@ -627,15 +627,15 @@ feature + bugfix release
     - added support to GeneralOption to act on unknown configuration environment variables
 - add support for only (re)generating module files: --module-only (#1018)
     - module naming scheme API is enhanced to include det_install_subdir method
-    - see http://easybuild.readthedocs.org/en/latest/Partial_installations.html#module-only
+    - see https://easybuild.readthedocs.io/en/latest/Partial_installations.html#module-only
 - add support for generating module files in Lua syntax (note: requires Lmod as modules tool) (#1060, #1255, #1256, #1270)
-    - see --module-syntax configuration option and http://easybuild.readthedocs.org/en/latest/Configuration.html#module-syntax
+    - see --module-syntax configuration option and https://easybuild.readthedocs.io/en/latest/Configuration.html#module-syntax
 - deprecate log.error method in favor of raising EasyBuildError exception (#1218)
-    - see http://easybuild.readthedocs.org/en/latest/Deprecated-functionality.html#depr-error-reporting
+    - see https://easybuild.readthedocs.io/en/latest/Deprecated-functionality.html#depr-error-reporting
 - add support for using external modules as dependencies, and to provide metadata for external modules (#1230, #1265, #1267)
-    - see http://easybuild.readthedocs.org/en/latest/Using_external_modules.html
+    - see https://easybuild.readthedocs.io/en/latest/Using_external_modules.html
 - add experimental support for Cray toolchains on top of PrgEnv modules: CrayGNU, CrayIntel, CrayCCE (#1234, #1268)
-    - see http://easybuild.readthedocs.io/en/latest/Cray-support.html for more information
+    - see https://easybuild.readthedocs.io/en/latest/Cray-support.html for more information
 - various other enhancements, including:
     - clear list of checksums when using --try-software-version (#1169)
     - sort the results of searching for files (e.g., --search output) (#1214)
@@ -644,17 +644,17 @@ feature + bugfix release
     - also reset $LD_PRELOAD when running module commands, in case module defined $LD_PRELOAD (#1222)
     - move location of 'module use' statements in generated module file (*after* 'module load' statements) (#1232)
     - add support for --show-default-configfiles (#1240)
-      - see http://easybuild.readthedocs.org/en/latest/Configuration.html#default-configuration-files
+      - see https://easybuild.readthedocs.io/en/latest/Configuration.html#default-configuration-files
     - report error on missing configuration files, rather than ignoring them (#1240)
-      - see http://easybuild.readthedocs.org/en/latest/Configuration.html#configuration-env-vars
+      - see https://easybuild.readthedocs.io/en/latest/Configuration.html#configuration-env-vars
     - clean up commit message used in easyconfig git repository (#1248)
     - add --hide-deps configuration option to specify names of software that must be installed as hidden modules (#1250)
-        - see http://easybuild.readthedocs.org/en/latest/Manipulating_dependencies.html#hide-deps
+        - see https://easybuild.readthedocs.io/en/latest/Manipulating_dependencies.html#hide-deps
     - add support for appending/prepending to --robot-paths to avoid overwriting default robot search path (#1252)
-        - see also http://easybuild.readthedocs.org/en/latest/Using_the_EasyBuild_command_line.html#robot-search-path-prepend-append
+        - see also https://easybuild.readthedocs.io/en/latest/Using_the_EasyBuild_command_line.html#robot-search-path-prepend-append
     - enable detection of use of unknown $EASYBUILD-prefixed environment variables (#1253)
     - add --installpath-modules and --installpath-software configuration options (#1258)
-      - see http://easybuild.readthedocs.org/en/latest/Configuration.html#installpath
+      - see https://easybuild.readthedocs.io/en/latest/Configuration.html#installpath
     - use dedicated subdirectory in temporary directory for each test to ensure better cleanup (#1260)
     - get rid of $PROFILEREAD hack when running commands, not needed anymore (#1264)
 - various bug fixes, including:
@@ -674,36 +674,36 @@ feature + bugfix release
     - avoid deprecation warnings w.r.t. use of 'message' attribute (hpcugent/vsc-base#155)
     - fix typo in log message rendering --ignoreconfigfiles unusable (hpcugent/vsc-base#158)
 - removed functionality that was deprecated for EasyBuild version 2.0 (#1143)
-    - see http://easybuild.readthedocs.org/en/latest/Removed-functionality.html
+    - see https://easybuild.readthedocs.io/en/latest/Removed-functionality.html
     - the fix_broken_easyconfigs.py script can be used to update easyconfig files suffering from this (#1151, #1206, #1207)
-    - for more information about this script, see http://easybuild.readthedocs.org/en/latest/Useful-scripts.html#fix-broken-easyconfigs-py
+    - for more information about this script, see https://easybuild.readthedocs.io/en/latest/Useful-scripts.html#fix-broken-easyconfigs-py
 - stop including a crippled copy of vsc-base, include vsc-base as a proper dependency instead (#1160, #1194)
     - vsc-base is automatically installed as a dependency for easybuild-framework, if a Python installation tool is used
-    - see http://easybuild.readthedocs.org/en/latest/Installation.html#required-python-packages
+    - see https://easybuild.readthedocs.io/en/latest/Installation.html#required-python-packages
 - various other enhancements, including:
     - add support for Linux/POWER systems (#1044)
     - major cleanup in tools/systemtools.py + significantly enhanced tests (#1044)
     - add support for 'eb -a rst', list available easyconfig parameters in ReST format (#1131)
     - add support for specifying one or more easyconfigs in combination with --from-pr (#1132)
-        - see http://easybuild.readthedocs.org/en/latest/Integration_with_GitHub.html#using-easyconfigs-from-pull-requests-via-from-pr
+        - see https://easybuild.readthedocs.io/en/latest/Integration_with_GitHub.html#using-easyconfigs-from-pull-requests-via-from-pr
     - define __contains__ in EasyConfig class (#1155)
     - restore support for downloading over a proxy (#1158)
         - i.e., use urllib2 rather than urllib
         - this involved sacrificing the download progress report (which was only visible in the log file)
     - let mpi_family return None if MPI is not supported by a toolchain (#1164)
     - include support for specifying system-level configuration files for EasyBuild via $XDG_CONFIG_DIRS (#1166)
-        - see http://easybuild.readthedocs.org/en/latest/Configuration.html#default-configuration-files
+        - see https://easybuild.readthedocs.io/en/latest/Configuration.html#default-configuration-files
     - make unit tests more robust (#1167, #1196)
-        - see http://easybuild.readthedocs.org/en/latest/Unit-tests.html
+        - see https://easybuild.readthedocs.io/en/latest/Unit-tests.html
     - add hierarchical module naming scheme categorizing modules by 'moduleclass' (#1176)
     - enhance bootstrap script to allow bootstrapping using supplied tarballs (#1184)
-        - see http://easybuild.readthedocs.org/en/latest/Installation.html#advanced-bootstrapping-options
+        - see https://easybuild.readthedocs.io/en/latest/Installation.html#advanced-bootstrapping-options
     - disable updating of Lmod user cache by default, add configuration option --update-modules-tool-cache (#1185)
         - for now, only the Lmod user cache can be updated using --update-modules-tool-cache
     - use available which() function, rather than running 'which' via run_cmd (#1192)
     - fix install-EasyBuild-develop.sh script w.r.t. vsc-base dependency (#1193)
     - also consider robot search path when looking for specified easyconfigs (#1201)
-        - see http://easybuild.readthedocs.org/en/latest/Using_the_EasyBuild_command_line.html#specifying-easyconfigs
+        - see https://easybuild.readthedocs.io/en/latest/Using_the_EasyBuild_command_line.html#specifying-easyconfigs
 - various bug fixes, including:
     - stop triggering deprecated/no longer support functionality in unit tests (#1126)
     - fix from_pr test by including dummy easyblocks for HPL and ScaLAPACK (#1133)
@@ -745,9 +745,9 @@ feature + bugfix release
 - deprecate automagic fallback to ConfigureMake easyblock (#1113)
     - easyconfigs should specify easyblock = 'ConfigureMake' instead of relying on the fallback mechanism
     - note: automagic fallback to ConfigureMake easyblock will be dropped in EasyBuild v2.0
-    - see also http://easybuild.readthedocs.org/en/latest/Deprecated-functionality.html#configuremake-fallback
+    - see also https://easybuild.readthedocs.io/en/latest/Deprecated-functionality.html#configuremake-fallback
 - stop triggering deprecated functionality, to enable use of --deprecated=2.0 (#1107, #1115, #1119)
-    - see http://easybuild.readthedocs.org/en/latest/Deprecated-functionality.html#configuremake-fallback for more information
+    - see https://easybuild.readthedocs.io/en/latest/Deprecated-functionality.html#configuremake-fallback for more information
 - various other enhancements, including:
     - add script to clean up gists created via --upload-test-report (#958)
     - also use -xHost when using Intel compilers on AMD systems (as opposed to -msse3) (#960)
@@ -763,12 +763,12 @@ feature + bugfix release
     - enable use of --show_hidden for avail subcommand with recent Lmod versions (#1081)
     - add --robot-paths configure option (#1080, #1093, #1095, #1114)
     - support use of %(DEFAULT_ROBOT_PATHS)s template in EasyBuild configuration files (#1100)
-        - see also http://easybuild.readthedocs.org/en/latest/Using_the_EasyBuild_command_line.html#controlling-the-robot-search-path
+        - see also https://easybuild.readthedocs.io/en/latest/Using_the_EasyBuild_command_line.html#controlling-the-robot-search-path
     - use -xHost rather than -xHOST, to match Intel documentation (#1084)
     - update and cleanup README file (#1085)
     - deprecate self.moduleGenerator in favor of self.module_generator in EasyBlock (#1088)
     - also support MPICH MPI family in mpi_cmd_for function (#1098)
-    - update documentation references to point to http://easybuild.readthedocs.org (#1102)
+    - update documentation references to point to https://easybuild.readthedocs.io (#1102)
     - check for OS dependencies with both rpm and dpkg (if available) (#1111)
 - various bug fixes, including:
     - fix picking required software version specified by --software-version and clean up tweak.py (#1062, #1063)
@@ -905,7 +905,7 @@ feature + bugfix release
     - add --upload-test-report command line option for uploading a detailed test report to GitHub as a gist
         - this requires specifying a GitHub username for which a GitHub token is available, using --github-user
         - with --dump-test-report, the test report can simply be dumped to file rather than being uploaded to GitHub
-        - see also http://easybuild.readthedocs.io/en/latest/Integration_with_GitHub.html#uploading-test-reports-upload-test-report
+        - see also https://easybuild.readthedocs.io/en/latest/Integration_with_GitHub.html#uploading-test-reports-upload-test-report
 - the 'makeopts' and 'premakeopts' easyconfig parameter are deprecated, and replaced by 'buildopts' and 'prebuildopts' (#918)
     - both 'makeopts' and 'premakeopts' will still be honored in future EasyBuild v1.x versions, but should no longer be used
 - various other enhancements, including:
@@ -1200,7 +1200,7 @@ v1.3.0 (April 1st 2013)
 -----------------------
 
 feature + bugfix release
-- added script to bootstrap EasyBuild with EasyBuild, see http://easybuild.readthedocs.io/en/latest/Installation.html#bootstrapping-easybuild (#531)
+- added script to bootstrap EasyBuild with EasyBuild, see https://easybuild.readthedocs.io/en/latest/Installation.html#bootstrapping-easybuild (#531)
 - reorganize framework/easyconfig.py module into framework/easyconfig package with modules (#574, #580)
 - support EasyBuild configuration via command line, environment variables and configuration files (#529, #552, #556, #558, #559)
 - various other enhancements, including:
