updates to GCCcore, git-lfs and bzip2 definition file, removing subdirectories in /scratch in container to strip everything out. /scratch still needs to be present in container for bootstraping again since --prefix requires /scratch to be created in advance.
Toolchain container boostrap progression: GCCcore-5.4.0 -> GCC-5.4.0-2.26 ->
gompi-2016b -> foss-2016b

--- a/easybuild/singularity-easybuild/apps/easybuild.bzip2-1.0.6
+++ b/easybuild/singularity-easybuild/apps/easybuild.bzip2-1.0.6
@@ -5,7 +5,10 @@ From: shahzebsiddiqui/easybuild-framework:centos-7.3.1611
 su - easybuild
 eb bzip2-1.0.6.eb --robot --installpath=/app/ --prefix=/scratch --tmpdir=/scratch/tmp  --module-naming-scheme=EasyBuildMNS
 exit
-rm -rf /scratch
+rm -rf /scratch/tmp/*
+rm -rf /scratch/build
+rm -rf /scratch/sources
+rm -rf /scratch/ebfiles_repo
 
 %runscript
 eval "$@"
