--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,29 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
+v3.5.0 (December 12th 2017)
+---------------------------
+
+feature release
+- various enhancements, including:
+  - add framework support for foss-like toolchain with Spectrum MPI: gsolf (#2329)
+  - add support for --preview-pr (#2331)
+  - flesh out find_extension function, hoist dict with extract commands into a constant (#2336)
+  - add support for using self.start_dir rather than using self.cfg['start_dir'] (#2339)
+  - add support for 'exts_default_options' easyconfig parameter (#2345)
+  - allow use of `start_dir` in extensions (#2353)
+- various bug fixes, including:
+  - fix typo in Class and comment, giolf != goolf. (#2327)
+  - fix minor issues with --inject-checksums (#2333)
+  - fix bug that slipped in with #2331 (#2337)
+  - fix error message when 'gv' Python package is not available (#2340)
+  - install paramiko version < 2.4.0 for Python 2.6 in Travis config (#2344)
+  - take exts_default_options easyconfig parameter into account for --inject-checksums (#2346)
+  - disable broken log rotation, avoid duplicate logging of output of executed commands under `--debug` (#2347)
+  - skip testing of --preview-pr if no GitHub token is available (#2348)
+  - use absolute paths to lib and lib64 icw $ORIGIN for the RPATH (#2358)
+
+
 v3.4.1 (October 17th 2017)
 --------------------------
 
