clean up release notes for EasyBuild v3.5.0

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -7,23 +7,22 @@ v3.5.0 (December 12th 2017)
 ---------------------------
 
 feature release
+- add support for implementing pre- and post-step hooks (#2343)
 - various enhancements, including:
-  - add framework support for foss-like toolchain with Spectrum MPI: gsolf (#2329)
-  - add support for --preview-pr (#2331)
+  - add support for foss-like toolchain with Spectrum MPI: gsolf (#2329)
+  - add support for --preview-pr (#2331, #2337, #2348)
+    - see also http://easybuild.readthedocs.io/en/latest/Integration_with_GitHub.html#previewing-easyconfig-pull-requests-preview-pr
   - flesh out find_extension function, hoist dict with extract commands into a constant (#2336)
   - add support for using self.start_dir rather than using self.cfg['start_dir'] (#2339)
-  - add support for 'exts_default_options' easyconfig parameter (#2345)
-  - allow use of `start_dir` in extensions (#2353)
+  - add support for 'exts_default_options' easyconfig parameter (#2345, #2346)
+  - allow use of 'start_dir' easyconfig parameter in extensions (#2353)
 - various bug fixes, including:
-  - fix typo in Class and comment, giolf != goolf. (#2327)
+  - fix typo in 'giolf' toolchain definition (#2327)
   - fix minor issues with --inject-checksums (#2333)
-  - fix bug that slipped in with #2331 (#2337)
   - fix error message when 'gv' Python package is not available (#2340)
   - install paramiko version < 2.4.0 for Python 2.6 in Travis config (#2344)
-  - take exts_default_options easyconfig parameter into account for --inject-checksums (#2346)
-  - disable broken log rotation, avoid duplicate logging of output of executed commands under `--debug` (#2347)
-  - skip testing of --preview-pr if no GitHub token is available (#2348)
-  - use absolute paths to lib and lib64 icw $ORIGIN for the RPATH (#2358)
+  - disable broken log rotation, avoid duplicate logging of output of executed commands under '--debug' (#2347)
+  - also include $ORIGIN and absolute paths to 'lib' and 'lib64' subdirectories in RPATH locations (#2358)
 
 
 v3.4.1 (October 17th 2017)
