--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -12,7 +12,7 @@ bugfix release
   - add support for Environment Modules 4 (#2365)
 - various bug fixes, including:
   - install SQLAlchemy < 1.2.0 with Python 2.6 in Travis config (#2367)
-  - make code in `tools/job/gc3pie.py` forward-compatible with GC3Pie 2.5 (#2373)
+  - make code in easybuild/tools/job/gc3pie.py forward-compatible with GC3Pie 2.5 (#2373)
 
 
 v3.5.0 (December 15th 2017)
