--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,18 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
+v3.5.3 (March 7th 2018)
+-----------------------
+
+bugfix release
+- various enhancements, including:
+  - re-enable testing against environment modules, bump Lmod to 7.7.16 (#2425)
+  - print which hook is being executed in the command line output (#2427)
+- various bug fixes, including:
+  - fix order in result of gen_list_easyblocks and gen_easyblocks_overview_rst (#2421)
+  - fix target account for branch pushed when using --new-pr (#2426)
+
+
 v3.5.2 (March 2nd 2018)
 -----------------------
 
